--- a/Amazon Clone/Amazon.html
+++ b/Amazon Clone/Amazon.html
@@ -85,6 +85,68 @@
     </header>
 
     <div class="big-image">
+        <div class="message">
+            <p>You are on Amazon.com. You can also shop on amazon India for millions of products with fast local delivery. <a>Click here to go to Amazon.in</a></p>
+        </div>
+    </div>
+    <div class="Main-box">
+        <div class="box1 box">
+            <div class="contant">
+                <h2>Healthcare and personal</h2>
+                <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box1_image.jpg');"></div>
+                <p class="seemore1">See more</p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="contant">
+                <h2>Healthcare and personal</h2>
+                <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box2_image.jpg');"></div>
+                <p class="seemore1">See more</p>
+            </div>
+        </div>
+        <div class="box3 box">
+             <div class="contant">
+                <h2>Healthcare and personal</h2>
+                <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box3_image.jpg');"></div>
+                <p class="seemore1">See more</p>
+            </div>
+        </div>
+        <div class="box4 box">
+             <div class="contant">
+                <h2>Healthcare and personal</h2>
+                <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box4_image.jpg');"></div>
+                <p class="seemore1">See more</p>
+            </div>
+        </div>
+
+        <div class="box1 box">
+            <div class="contant">
+                <h2>Healthcare and personal</h2>
+                <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box5_image.jpg');"></div>
+                <p class="seemore1">See more</p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="contant">
+                <h2>Healthcare and personal</h2>
+                <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box6_image.jpg');"></div>
+                <p class="seemore1">See more</p>
+            </div>
+        </div>
+        <div class="box3 box">
+             <div class="contant">
+                <h2>Healthcare and personal</h2>
+                <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box7_image.jpg');"></div>
+                <p class="seemore1">See more</p>
+            </div>
+        </div>
+        <div class="box4 box">
+             <div class="contant">
+                <h2>Healthcare and personal</h2>
+                <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box8_image.jpg');"></div>
+                <p class="seemore1">See more</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
