--- a/Amazon Clone/Amazon.html
+++ b/Amazon Clone/Amazon.html
@@ -92,7 +92,7 @@
     <div class="Main-box">
         <div class="box1 box">
             <div class="contant">
-                <h2>Healthcare and personal</h2>
+                <h2>Clothes</h2>
                 <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box1_image.jpg');"></div>
                 <p class="seemore1">See more</p>
             </div>
@@ -106,14 +106,14 @@
         </div>
         <div class="box3 box">
              <div class="contant">
-                <h2>Healthcare and personal</h2>
+                <h2>Furniture</h2>
                 <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box3_image.jpg');"></div>
                 <p class="seemore1">See more</p>
             </div>
         </div>
         <div class="box4 box">
              <div class="contant">
-                <h2>Healthcare and personal</h2>
+                <h2>Elecrtonics</h2>
                 <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box4_image.jpg');"></div>
                 <p class="seemore1">See more</p>
             </div>
@@ -121,32 +121,105 @@
 
         <div class="box1 box">
             <div class="contant">
-                <h2>Healthcare and personal</h2>
+                <h2>Beauty</h2>
                 <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box5_image.jpg');"></div>
                 <p class="seemore1">See more</p>
             </div>
         </div>
         <div class="box2 box">
             <div class="contant">
-                <h2>Healthcare and personal</h2>
+                <h2>Dogs</h2>
                 <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box6_image.jpg');"></div>
                 <p class="seemore1">See more</p>
             </div>
         </div>
         <div class="box3 box">
              <div class="contant">
-                <h2>Healthcare and personal</h2>
+                <h2>Toys</h2>
                 <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box7_image.jpg');"></div>
                 <p class="seemore1">See more</p>
             </div>
         </div>
         <div class="box4 box">
              <div class="contant">
-                <h2>Healthcare and personal</h2>
+                <h2>Discover Trends</h2>
                 <div class="img1" style="background-image: url('/Ingale.Repo/Amazon Clone/images/box8_image.jpg');"></div>
                 <p class="seemore1">See more</p>
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="foot-1">
+            Back to Top
+        </div>
+
+        <div class="foot-2">
+            <ul>
+                <p>Get to Know Us</p>
+                <a href="#">Careers</a>
+                <a href="#">Blog</a>
+                <a href="#">About Amazon</a>
+                <a href="#">Investor Relations</a>
+                <a href="#">Amazon Devices</a>
+                <a href="#">Amazon Science</a>
+            </ul>
+
+            <ul>
+                <p> Make Money with Us</p>
+                <a href="#">Sell products on Amazon</a>
+                <a href="#">Sell apps on Amazon</a>
+                <a href="#">Become an Affiliate </a>
+                <a href="#">Advertise Your Products</a>
+                <a href="#">Self-Publish with Us</a>
+                <a href="#">Host an Amazon Hub </a>
+            </ul>
+
+            <ul>
+                <p> Amazon Payment Products</p>
+                <a href="#">Amazon Business Card</a>
+                <a href="#">Shop with Points</a>
+                <a href="#">Reload Your Balance </a>
+                <a href="#">Amazon Currency Converter</a>
+            </ul>
+
+            <ul>
+                <p>Let Us Help You</p>
+                <a href="#">Amazon and COVID-19</a>
+                <a href="#">Your Account</a>
+                <a href="#">Your Order</a>
+                <a href="#">Shipping Rates & Policies</a>
+                <a href="#">Returns & Replacements</a>
+                <a href="#">Manage Your Content and Devices</a>
+                <a href="#">Amazon Assistant</a>
+                <a href="#">Help</a>
+            </ul>
+        </div>
+
+        <div class="foot-3">
+            <div class="logo2"></div>
+
+            <div class="Dolaar">
+                <i class="fa-solid fa-dollar-sign"></i>
+                <p>USD-U.S.Dollar</p>
+            </div>
+
+            <div class="foot3-box">
+                <div class="logo-Ind"></div>
+                <p>India</p>
+            </div>
+        </div>
+
+        <div class="foot-4">
+            <div class="f1">
+                <a href="#">Conditions of use</a>
+                <a href="#">Privacy notice</a>
+                <a href="#">Your ads privacy choice</a>
+            </div>
+            <div class="f2">
+                © 1996-2024, Amazon.com, Inc. or its affiliates
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
